tests/baselines/reference/privateIndexer.errors.txt
tests/cases/conformance/classes/indexMemberDeclarations/privateIndexer.ts(4,5): error TS1071: 'private' modifier cannot appear on an index signature.
tests/cases/conformance/classes/indexMemberDeclarations/privateIndexer.ts(8,5): error TS1071: 'private' modifier cannot appear on an index signature.
tests/cases/conformance/classes/indexMemberDeclarations/privateIndexer.ts(12,5): error TS1071: 'private' modifier cannot appear on an index signature.


==== tests/cases/conformance/classes/indexMemberDeclarations/privateIndexer.ts (3 errors) ====
    // private indexers not allowed
    
    class C {
        private [x: string]: string;
        ~~~~~~~
!!! error TS1071: 'private' modifier cannot appear on an index signature.
    }
    
    class D {
        private [x: number]: string;
        ~~~~~~~
!!! error TS1071: 'private' modifier cannot appear on an index signature.
    }
    
    class E<T> {
        private [x: string]: T;
        ~~~~~~~
!!! error TS1071: 'private' modifier cannot appear on an index signature.
    }